--- a/gladiatorGame.csproj
+++ b/gladiatorGame.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action.cs" />
+    <Compile Include="Battle.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
