--- a/gladiatorGame.csproj
+++ b/gladiatorGame.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Action.cs" />
     <Compile Include="Battle.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="FileManager.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
